# composearr

./: .gitattributes  .gitignore  .pre-commit-config.yaml.example  .pre-commit-hooks.yaml  ADVANCED_FEATURES.md  BUILD_BRIEF.md  CLAUDE.md  CODE_CLAUDE_HANDOFF.md  CONFIG_SYSTEM.md  MANAGEMENT_PLATFORM_MESSAGING.md  PRODUCTION_REQUIREMENTS.md  README.md  RULES_SPECIFICATION.md  SECURITY.md  SECURITY_AND_OPTIMIZATION.md  SMART_FEATURES.md  TESTING_STRATEGY.md  UX_IMPROVEMENTS.md  action.yml  compose-hygiene-research.txt  composearr-frontend-research-brief.md  pyproject.toml  ui_mockup.py  ui_mockup_v2.py  whale.py
.github/: labels.yml  pull_request_template.md  release-drafter.yml
examples/: arrstack.composearr.yml  homelab.composearr.yml  production.composearr.yml
feedback/: AI_REVIEW_PACKAGE_FINAL.md  Composearr v0.1.0 testing feedback.txt  EVEREST_EXPEDITION_PLAN.md  STACK_MANAGER_RESEARCH.md  claudeeverestepeditionresponse.txt
testingstacks/: generate.py
tests/: conftest.py  test_cli.py  test_config.py  test_config_cmd.py  test_cross_platform.py  test_edge_cases.py  test_entropy.py  test_explain.py  test_fixer.py  test_healthcheck_helper.py  test_known_services.py  test_network_topology.py  test_output_formats.py  test_performance.py  test_platform_detect.py  test_port_parser.py  test_ports.py  test_rules.py  test_scanner.py  test_security.py  test_smart_env_extraction.py  test_sprint1.py  test_sprint11.py  test_sprint13.py  test_sprint2.py  test_sprint3.py  test_sprint4.py  test_sprint5.py  test_sprint6.py  test_sprint7.py  test_sprint8.py  test_sprint9.py  (+3 more)
(+227 files in other folders)
